[gd_scene load_steps=5 format=3 uid="uid://6w0rs55km8nm"]

[ext_resource type="PackedScene" uid="uid://n06gkookqeml" path="res://scenes/game/windows/Ads.tscn" id="1_07a7e"]
[ext_resource type="Script" path="res://scripts/ads/ads_pair.gd" id="2_3kwqw"]
[ext_resource type="Texture2D" uid="uid://cifihmb2t0c24" path="res://ressources/assets/Pair/Pair_Wallpaper.png" id="3_jn4tm"]
[ext_resource type="FontFile" uid="uid://dwgslonlru0ck" path="res://ressources/Battlenet.ttf" id="4_pos88"]

[node name="Windows" instance=ExtResource("1_07a7e")]
script = ExtResource("2_3kwqw")

[node name="PairWallpaper" type="Sprite2D" parent="." index="2"]
position = Vector2(250.5, 222.25)
scale = Vector2(0.400833, 0.344271)
texture = ExtResource("3_jn4tm")

[node name="GridContainer" type="GridContainer" parent="PairWallpaper" index="0"]
offset_left = -560.0
offset_top = -471.0
offset_right = 538.0
offset_bottom = 429.0
scale = Vector2(1.265, 1.265)
columns = 3

[node name="Button1" type="Button" parent="PairWallpaper/GridContainer" index="0"]
layout_mode = 2
focus_mode = 0

[node name="Button2" type="Button" parent="PairWallpaper/GridContainer" index="1"]
layout_mode = 2
focus_mode = 0

[node name="Button3" type="Button" parent="PairWallpaper/GridContainer" index="2"]
layout_mode = 2
focus_mode = 0

[node name="Button4" type="Button" parent="PairWallpaper/GridContainer" index="3"]
layout_mode = 2
focus_mode = 0

[node name="Button5" type="Button" parent="PairWallpaper/GridContainer" index="4"]
layout_mode = 2
focus_mode = 0

[node name="Button6" type="Button" parent="PairWallpaper/GridContainer" index="5"]
layout_mode = 2
focus_mode = 0

[node name="Label" type="Label" parent="." index="3"]
offset_left = 17.0
offset_top = 12.0
offset_right = 407.0
offset_bottom = 48.0
theme_override_fonts/font = ExtResource("4_pos88")
theme_override_font_sizes/font_size = 41
text = "Paire2carte.jpeg"

[connection signal="pressed" from="PairWallpaper/GridContainer/Button1" to="." method="_on_pressed" binds= [0]]
[connection signal="pressed" from="PairWallpaper/GridContainer/Button2" to="." method="_on_pressed" binds= [1]]
[connection signal="pressed" from="PairWallpaper/GridContainer/Button3" to="." method="_on_pressed" binds= [2]]
[connection signal="pressed" from="PairWallpaper/GridContainer/Button4" to="." method="_on_pressed" binds= [3]]
[connection signal="pressed" from="PairWallpaper/GridContainer/Button5" to="." method="_on_pressed" binds= [4]]
[connection signal="pressed" from="PairWallpaper/GridContainer/Button6" to="." method="_on_pressed" binds= [5]]
